--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -124,7 +124,7 @@
 
     <!-- Action Buttons -->
     <div class="p-col-2">
-      <qa-buttons [validationList]="true" [validationRun]="model.validationRun"></qa-buttons>
+      <qa-buttons [validationList]="true" [validationRun]="model.validationRun" [published]="published"></qa-buttons>
     </div>
 
 
