--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -6,7 +6,7 @@
           <h4 class="my-0 font-weight-normal">
             Summary:
             <!--          {% if is_owner and val.is_unpublished %}-->
-            <span *ngIf="validationRun.is_unpublished">
+            <span *ngIf="validationRun.is_unpublished && validationRun.isOwner">
               <span *ngIf="hideElement" class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}</span>
               <!--          <input class="d-none edit_name"/>-->
             <button
@@ -39,6 +39,11 @@
                   class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
               <span class="no_name_change_info pi pi-question-circle help-icon"
                     title="Validation has been published. There is no possibility of changing its name."> </span>
+            </span>
+            <span *ngIf="!validationRun.isOwner"
+                  class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+              <span class="no_name_change_info pi pi-question-circle help-icon"
+                    title="Validation belongs to another user. There is no possibility of changing its name."> </span>
             </span>
           </h4>
         </div>
