--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
@@ -7,6 +7,7 @@
         <h5 class="my-0">
           <span class="font-weight-normal"><b>Validation: {{ valrun.name_tag }}</b></span>
         </h5>
+        <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun"></qa-buttons>
 <!--        <div class="col-sm">-->
 <!--          <a class="btn btn-sm btn-primary btn-action" -->
 <!--             href="{% url 'result' valrun.id %}" -->
