--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
@@ -1,30 +1,18 @@
 <div *ngIf="trackedRuns$ | async as myCopiedRuns" class="container text-center mb-5 mt-4" style="max-width: 40rem;">
-  <h1 class="jumbotron-heading">Tracked validations</h1>
-  <div class="card-deck mb-3">
-  <div class="col">
-    <div *ngFor="let valrun of myCopiedRuns" class="mx-0" id="attached_result_row_{{ valrun.id }}">
-      <div class="card-header att_val_container">
-        <h5 class="my-0">
-          <span class="font-weight-normal"><b>Validation: {{ valrun.name_tag }}</b></span>
-        </h5>
-        <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun"></qa-buttons>
-<!--        <div class="col-sm">-->
-<!--          <a class="btn btn-sm btn-primary btn-action" -->
-<!--             href="{% url 'result' valrun.id %}" -->
-<!--             title="View results">-->
-<!--            <span class="fas fa-folder-open"></span>-->
-<!--          </a>-->
-<!--          {% if valrun.end_time %}-->
-<!--          {% if valrun.output_file %}-->
-<!--          <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>-->
-<!--          <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>-->
-<!--          <button class="btn btn-sm btn-primary btn-action" title="Remove this validation from your list" onclick="ajax_detach_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>-->
-<!--          {% endif %}-->
-<!--          {% endif %}-->
-<!--        </div>-->
+  <div *ngIf="myCopiedRuns.length != 0">
+    <h1 class="jumbotron-heading">Tracked validations</h1>
+    <div class="card-deck mb-3">
+    <div class="col">
+      <div *ngFor="let valrun of myCopiedRuns" class="mx-0" id="attached_result_row_{{ valrun.id }}">
+        <div class="card-header att_val_container">
+          <h5 class="my-0">
+            <span class="font-weight-normal"><b>Validation: {{ valrun.name_tag }}</b></span>
+          </h5>
+          <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun"></qa-buttons>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  </div>
 </div>
 
