--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
@@ -1,18 +1,20 @@
-<div *ngIf="trackedRuns$ | async as myCopiedRuns" class="container text-center mb-5 mt-4" style="max-width: 40rem;">
+<div *ngIf="trackedRuns$ | async as myCopiedRuns" class="container text-center mb-5 mt-4" style="max-width: 60rem;">
   <div *ngIf="myCopiedRuns.length != 0">
     <h1 class="jumbotron-heading">Tracked validations</h1>
     <div class="card-deck mb-3">
-    <div class="col">
-      <div *ngFor="let valrun of myCopiedRuns" class="mx-0" id="attached_result_row_{{ valrun.id }}">
-        <div class="card-header att_val_container">
-          <h5 class="my-0">
-            <span class="font-weight-normal"><b>Validation: {{ valrun.name_tag }}</b></span>
-          </h5>
-          <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun"></qa-buttons>
+      <div class="col">
+        <div *ngFor="let valrun of myCopiedRuns" class="mx-0" id="attached_result_row_{{ valrun.id }}">
+          <div class="card-header att_val_container">
+            <h5 class="my-0">
+              <span class="font-weight-normal"><b>Validation: {{ valrun.name_tag }}</b></span>
+            </h5>
+            <div class="col-sm buttons">
+                <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun"></qa-buttons>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </div>
 
