Transfer Terms to Angular

--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="about.component.scss">
 <div style="text-align: left; max-width: 40rem; width: 100%; margin: auto;">
     <p align="justify">
         <a href="https://www.ffg.at/en"><img id="logo_ffg" src="assets/about_images/logo_ffg.png"></a>
@@ -15,6 +16,7 @@
                 </td>
                 <td class="align-left">
                     <b>TU Wien (Vienna University of Technology)</b><br>
+                  batman
                     Department of Geodesy and Geoinformation<br>
                     Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
                     Website: <a href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/">https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/</a><br>
