--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../about/about.component.scss">
 <script src="terms.component.ts"></script>
 <link rel="stylesheet" href="terms.component.scss">
 
