Transfer Terms to Angular (#186)
* Transfer Terms to Angular

* Update text

* Update css

* Update terms html

Co-authored-by: Monika Tercjak <57092960+sheenaze@users.noreply.github.com>

--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="about.component.scss">
 <div style="text-align: left; max-width: 40rem; width: 100%; margin: auto;">
     <p align="justify">
         <a href="https://www.ffg.at/en"><img id="logo_ffg" src="assets/about_images/logo_ffg.png"></a>
