--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -127,6 +127,7 @@
     </li>
   </ol>
 
-  <a pageScroll [pageScrollDuration]="1" href="#top">Back to top</a>
+  <!--  <a pageScroll [pageScrollDuration]="1" href="#top">Back to top</a>-->
+  <qa-scroll-to-top></qa-scroll-to-top>
 
 </div>
