--- a/UI/src/app/pages/validations/validations.component.html
+++ b/UI/src/app/pages/validations/validations.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <qa-tracked-validations></qa-tracked-validations>
   <qa-validation-page-paginated [published]="false"></qa-validation-page-paginated>
+  <qa-scroll-to-top></qa-scroll-to-top>
 </div>
