condition added, so that there is no possibility of archiving validations belonging to a different user

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -15,7 +15,7 @@
   </a>
 
 <!--custom validations only-->
-  <span *ngIf="validationRun.end_time && validationRun.is_unpublished"
+  <span *ngIf="validationRun.end_time && validationRun.is_unpublished && isOwner"
         [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
 
     <button *ngIf="validationRun.is_archived"
