--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -143,30 +143,26 @@
                 calculation.
               </li>
             </ng-template>
-
-            <!--          {% if is_owner %}-->
-            <!--          {% if valrun.expiry_date %}-->
-            <!--          <li>-->
-            <!--            {% if valrun.is_near_expiry %}-->
-            <!--            <span class="fas fa-exclamation-triangle"></span>-->
-            <!--            This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}.-->
-            <!--            {% else %}-->
-            <!--            <span class="fas fa-calendar-alt"></span>-->
-            <!--            This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}.-->
-            <!--            {% endif %}-->
-            <!--          </li>-->
-            <!--          {% elif valrun.is_archived %}-->
-            <!--          <li>-->
-            <!--            <span class="fas fa-archive"></span>-->
-            <!--            This validation has been archived. It will NOT be automatically removed during cleanup.-->
-            <!--          </li>-->
-            <!--          {% endif %}-->
-            <!--          {% endif %}-->
-
-
+            <li *ngIf="validationRun.expiry_date && getCurrentUser() === validationRun.user">
+              <span *ngIf="validationRun.is_near_expiry"
+                    class="p-panel-header-icon pi pi-exclamation-triangle expiry-icons">
+                This validation will SOON be automatically removed during cleanup on {{ validationRun.expiry_date|date: dateFormat :timeZone}} {{timeZone}}.
+              </span>
+              <span *ngIf="!validationRun.is_near_expiry"
+                    class="p-panel-header-icon pi pi-calendar expiry-icons">
+                    This validation will be automatically removed during cleanup on {{ validationRun.expiry_date|date: dateFormat :timeZone }} {{timeZone}}.
+              </span>
+            </li>
+            <li *ngIf="validationRun.is_archived && validationRun.is_unpublished">
+              <span
+                class="p-panel-header-icon pi pi- expiry-icons">
+                <fa-icon [icon]="faIcons.faArchive"></fa-icon>
+                This validation has been archived. It will NOT be automatically removed during cleanup.
+              </span>
+            </li>
             <li *ngIf="validationRun.doi">
-              <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank"
-                                                                                                href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
+              <span class="fas fa-book"></span> This result was published on zenodo with DOI
+              <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
             </li>
 
 
