new components added to validation-result page

--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -16,6 +16,12 @@
         <div class="p-col-12">
           <qa-validation-summary [validationModel]="validationModel"></qa-validation-summary>
         </div>
+        <div class="p-col-12">
+          <qa-summary-statistics></qa-summary-statistics>
+        </div>
+        <div class="p-col-12">
+          <qa-result-files></qa-result-files>
+        </div>
       </div>
 
     </div>
