function for downloading csv added and attached to the button

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -21,7 +21,8 @@
             <button type="button"
                     style="width: 12rem;"
                     class="btn btn-sm btn-primary"
-                    title="Download the table to a .csv file">
+                    title="Download the table to a .csv file"
+                    (click)="getSummaryStatisticsAsCsv()">
               <span class="pi pi-download"></span> Download .csv table
             </button>
           </div>
