summary statistics window collapsed by default

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="(table$|async) as table" class="p-grid no-gutters">
       <div class="p-col-12">
-        <p-panel [toggleable]="true">
+        <p-panel [toggleable]="true" [collapsed]="true">
           <ng-template pTemplate="header">
             <div class="text-center my-1" style="width: 91%">
               <h4 class="my-0 font-weight-normal">Summary statistics</h4>
