class help-icon added

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -9,7 +9,7 @@
           <ng-template pTemplate="icons">
             <label class="mb-0" pTooltip="Expand this section to inspect a table of statistics of the validation results."
                    tooltipPosition="bottom">
-              <span class="p-panel-header-icon pi pi-question-circle"></span>
+              <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
             </label>
           </ng-template>
           <div class="pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
