--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -104,12 +104,12 @@
 <!--  tracked validations on custom validations page-->
   <span *ngIf="validationRun.output_file && tracked">
     <button class="btn btn-sm btn-primary btn-action"
-            (click)="downloadResultFile(validationRun.output_dir_url+graphicsFileName, graphicsFileName)"
+            (click)="downloadResultFile(validationRun.id, 'graphics',validationRun.id + '_graphs.zip')"
             title="Download graphs .zip">
       <span class="pi pi-download"></span>
     </button>
     <button class="btn btn-sm btn-primary btn-action"
-            (click)="downloadResultFile(validationRun.output_file, validationRun.output_file_name)"
+            (click)="downloadResultFile(validationRun.id, 'netCDF', validationRun.output_file_name)"
             title="Download validation run .nc file">
       <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
     </button>
