--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -1,1 +1,13 @@
-<p>result-files works!</p>
+<div class="p-grid no-gutters">
+  <div class="p-col-12">
+    <p-panel>
+      <ng-template pTemplate="header">
+        <div class="text-center" style="width: 95%">
+          <h4 class="my-0 py-0 font-weight-normal">Result files</h4>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="icons">
+      </ng-template>
+    </p-panel>
+  </div>
+</div>
