validation id passed to result-files component

--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -21,7 +21,7 @@
           <qa-summary-statistics [validationRun]="validationRun" [configs]="configs"></qa-summary-statistics>
         </div>
         <div class="p-col-12">
-          <qa-result-files></qa-result-files>
+          <qa-result-files [validationId]="validationRun.id"></qa-result-files>
         </div>
       </div>
 
